api: add operation id, ogen group, and HTCJobLogs object to the htc logs api
